--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
         <div class="card-body">
           <p class="card-text">Asesoria y acompañamiento integral en asuntos contravencionales y de responsabilidad civil.
             </p>
-          <button type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-          </svg></button>
+          </svg></a>
         </div>
       </div>
     </div>
@@ -184,42 +184,42 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="img/OTROS SERVICIOS.png" class="border card-img-top" alt="...">
+        <a href="otrosservios.html"><img src="img/OTROS SERVICIOS.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Otros servicios: </h4>
           <p class="card-text">Desde que se incorporó el Registro Único Nacional de Tránsito más conocido como RUNT, se establecieron procesos y requisitos a través de esta plataforma para poder acceder a servicios tanto de consulta como de reporte, es por esto que te ofrecemos la posibilidad de realizar algunos trámites desde nuestra empresa, te brindamos servicio de inscripción, actualización de datos, duplicado de la licencia de conducción y cambio de documento de tarjeta de identidad a cédula de ciudadanía en la licencia de conducción. 
             </p>
-          <button type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="otrosservios.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-          </svg></button>
+          </svg></a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/certificamos.png" class="border card-img-top" alt="...">
+        <a href="certificados.html"><img src="img/certificamos.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Certificados:</h4>
           <p class="card-text">Servicio prestado a personas y/o empresas que requieren la respectiva certificación para laborar como conductores y que les permite no solo evaluar sus conocimientos respecto a normatividad, técnicas y prevención sino también adquirir información nueva a modo de capacitación para el desempeño de sus labores, lo cual garantiza sus saberes y capacidades para ejercer y así cumplir con lo dispuesto en el Plan de Seguridad Vial (PSV) dispuesto en la empresa en la cual laboran o para cumplir los requisitos de contratación. .</p>
-          <button type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="certificados.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-          </svg></button>
+          </svg></a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="img/aliados.png" class="border card-img-top" alt="...">
+        <a href="aliados.html"><img src="img/aliados.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Aliados:</h4>
           <p class="card-text">Comprometidos contigo te brindamos diferentes alternativas para que accedas a nuestros servicios y puedas disfrutar de la mejor experiencia de servicio y aprendizaje. Hemos encontrado empresas de alto valor que se han unido a nosotros para aunar esfuerzos y obtengas lo que tanto quieres, servicios de altor valor a un costo asequible y con diferentes alternativas donde puedas elegir la que más se acomode a tu estado actual y te dejes consentir al disfrutar de un servicio pensado en tu bienestar. ¡Bienvenido! 
             </p>
-          <button type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="aliados.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-          </svg></button>
+          </svg></a>
         </div>
       </div>
     </div>
