--- a/vehiculos.html
+++ b/vehiculos.html
@@ -51,31 +51,14 @@
 </header>
 <body>
     <section>
+      <h2>Automoviles</h2>
+      <hr>
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
               <div class="card">
                 <img src="img/sail.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <img src="img/nisan.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <img src="img/beet.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <h5 class="card-title">Chevrolet Sail</h5>
                 </div>
               </div>
             </div>
@@ -83,8 +66,23 @@
               <div class="card">
                 <img src="img/kia.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Kia Picanto</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="img/onix.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Chevrolet Onix</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="img/sandero.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Renault Sandero</h5>
                 </div>
               </div>
             </div>
@@ -96,39 +94,90 @@
             <div class="card">
               <img src="img/kwid.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Renault Kwid</h5>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="img/logan.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Renault Logan</h5>
+              </div>
+            </div>
+          </div>
+  </section>
+  <section>
+    <h2>Motocicletas</h2>
+    <hr>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="img/automatica.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Chevrolet Sail</h5>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="img/kia.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Kia Picanto</h5>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="img/onix.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Chevrolet Onix</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="img/sandero.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Renault Sandero</h5>
               </div>
             </div>
           </div>
         </div>
   </section>
+  <footer class="color">
+    <div class="container">
+      <div class="row">
+              <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="cen">
+                 <a href="https://www.instagram.com/cea_conducimos/"><span class="redes"><img class="logo1" src="img/instagram.png" alt=""></span></a>
+                 <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
+                 <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
+                </div>
+                 <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
+               </div>
+               <div class="col">
+                <div class=" desc-box">
+                    <div class="fodn">
+                        <div class="card-text">
+                            <div class="row">
+                                <div class="col">
+                                  <div class="cen1 card-title"><img class="redes" src="img/logoAlcaldia.png" alt=""></a></h2></div>
+                                  <h4 class="copy">Resolución No 01325 de 2014 de las secretaria de educación de Medellín</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+               <div class="col-md-4 col-sm-6 col-xs-12">
+                 <ul class="address">
+                  <img class="cen2 redes" src="img/logoTransporte.png" alt="">  
+                   <h4 class="copy">Resolución No 1240 del 15 de mayo de 2014 del ministerio de transport</h4>
+                  </ul>
+               </div>
+           </div> 
+       </div>
+   </footer>
 </body>
 </html>
