--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <li><a class="dropdown-item" href="index.html">Inicio</a></li>
               <li><a class="dropdown-item" href="vehiculos.html">Vehículos</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="CONTACTENOS.html">Dirección</a></li>
+              <li><a class="dropdown-item" href="#">Dirección</a></li>
             </ul>
           <li class="nav-item">
             <a class="nav-link active btn btn-outline-dark" aria-current="page" href="vehiculos.html">VEHÍCULOS</a>
@@ -184,7 +184,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <a href="otrosservios.html"><img src="img/OTROS SERVICIOS.png" class="border card-img-top" alt="..."></a>
+        <a href="otrosservios.html"><img src="img/OTROS SERVICIOS.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Otros servicios: </h4>
           <p class="card-text">Desde que se incorporó el Registro Único Nacional de Tránsito más conocido como RUNT, se establecieron procesos y requisitos a través de esta plataforma para poder acceder a servicios tanto de consulta como de reporte, es por esto que te ofrecemos la posibilidad de realizar algunos trámites desde nuestra empresa, te brindamos servicio de inscripción, actualización de datos, duplicado de la licencia de conducción y cambio de documento de tarjeta de identidad a cédula de ciudadanía en la licencia de conducción. 
