--- a/vehiculos.html
+++ b/vehiculos.html
@@ -30,7 +30,7 @@
               <li><a class="dropdown-item" href="index.html">Inicio</a></li>
               <li><a class="dropdown-item" href="vehiculos.html">Vehículos</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="CONTACTENOS.html">Dirección</a></li>
+              <li><a class="dropdown-item" href="#">Dirección</a></li>
             </ul>
           <li class="nav-item">
             <a class="nav-link active btn btn-outline-dark" aria-current="page" href="vehiculos.html">VEHÍCULOS</a>
@@ -115,7 +115,7 @@
             <div class="card">
               <img src="img/automatica.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Chevrolet Sail</h5>
+                <h5 class="card-title">Sym Crox 150</h5>
               </div>
             </div>
           </div>
