--- a/otrosservios.html
+++ b/otrosservios.html
@@ -28,10 +28,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                 <li><a class="dropdown-item" href="index.html">Inicio</a></li>
-                <li><a class="dropdown-item" href="#">Cursos</a></li>
                 <li><a class="dropdown-item" href="vehiculos.html">Vehículos</a></li>
-                <li><a class="dropdown-item" href="#">Licencia de moto</a></li>
-                <li><a class="dropdown-item" href="#">Licencia de carro</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Dirección</a></li>
               </ul>
@@ -56,7 +53,7 @@
     <div class="card mb-3" style="max-width: 1500px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="img/OTROS SERVICIOS.png" class="img-fluid rounded-start" alt="...">
+            <img src="img/OTROS SERVICIOS.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
