--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                           <div class="row">
                               <div class="col">
                                 <div class="cen1 card-title"><img class="redes" src="img/logoAlcaldia.png" alt=""></a></h2></div>
-                                <h4 class="copy">Resolución No 01325 de 2014 de las secretaria de educación de Medellín</h4>
+                                <h4 class="copy">Resolución No 01325 de 2014 de la secretaria de educación de Medellín</h4>
                               </div>
                           </div>
                       </div>
@@ -256,7 +256,7 @@
              <div class="col-md-4 col-sm-6 col-xs-12">
                <ul class="address">
                 <img class="cen2 redes" src="img/logoTransporte.png" alt="">  
-                 <h4 class="copy">Resolución No 1240 del 15 de mayo de 2014 del ministerio de transport</h4>
+                 <h4 class="copy">Resolución No 1240 del 15 de mayo de 2014 del ministerio de transporte</h4>
                 </ul>
              </div>
          </div> 
