--- a/CONTACTENOS.html
+++ b/CONTACTENOS.html
@@ -94,38 +94,38 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.2700134583724!2d-75.60397688529413!3d6.228088128255006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429eb378c804f%3A0x17a2e3ad2525f5f5!2sCentro%20de%20Ense%C3%B1anza%20Automovil%C3%ADstica%20Conducimos!5e0!3m2!1ses!2sco!4v1634242663983!5m2!1ses!2sco" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </section>
 <footer class="color">
-    <div class="container">
-      <div class="row">
-              <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="cen">
-                 <a href="https://www.instagram.com/cea_conducimos/"><span class="redes"><img class="logo1" src="img/instagram.png" alt=""></span></a>
-                 <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
-                 <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
-                </div>
-                <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
-               </div>
-               <div class="col">
-                <div class=" desc-box">
-                    <div class="fodn">
-                        <div class="card-text">
-                            <div class="row">
-                                <div class="col">
-                                  <div class="cen1 card-title"><img class="redes" src="img/logoAlcaldia.png" alt=""></a></h2></div>
-                                  <h4 class="copy">Resolución No 01325 de 2014 de las secretaria de educación de Medellín</h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-               <div class="col-md-4 col-sm-6 col-xs-12">
-                 <ul class="address">
-                  <img class="cen2 redes" src="img/logoTransporte.png" alt="">  
-                   <h4 class="copy">Resolución No 1240 del 15 de mayo de 2014 del ministerio de transport</h4>
-                  </ul>
-               </div>
-           </div> 
-       </div>
-   </footer>
+  <div class="container">
+    <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="cen">
+               <a href="https://www.instagram.com/cea_conducimos/"><span class="redes"><img class="logo1" src="img/instagram.png" alt=""></span></a>
+               <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
+               <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
+              </div>
+               <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
+             </div>
+             <div class="col">
+              <div class=" desc-box">
+                  <div class="fodn">
+                      <div class="card-text">
+                          <div class="row">
+                              <div class="col">
+                                <div class="cen1 card-title"><img class="redes" src="img/logoAlcaldia.png" alt=""></a></h2></div>
+                                <h4 class="copy">Resolución No 01325 de 2014 de la secretaria de educación de Medellín</h4>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+             <div class="col-md-4 col-sm-6 col-xs-12">
+               <ul class="address">
+                <img class="cen2 redes" src="img/logoTransporte.png" alt="">  
+                 <h4 class="copy">Resolución No 1240 del 15 de mayo de 2014 del ministerio de transporte</h4>
+                </ul>
+             </div>
+         </div> 
+     </div>
+ </footer>
 </body>
 </html>
