--- a/empresa.html
+++ b/empresa.html
@@ -39,7 +39,7 @@
               <a class="nav-link active btn btn-outline-dark" aria-current="page" href="empresa.html">NUESTRA EMPRESA</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="CONTACTENOS.html">CONTÁCTENOS</a>
+              <a class="nav-link active btn btn-outline-dark" aria-current="page" href="formulario.php">CONTÁCTENOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active btn btn-outline-dark" aria-current="page" href="https://www.psepagos.co/PSEHostingUI/ShowTicketOffice.aspx?ID=8624">PAGOS<img class="pse" src="img/pse.png" alt=""></a>
@@ -83,7 +83,7 @@
                <a href="https://www.facebook.com/CEA-Conducimos-SAS-104583014495564"><span class="redes"><img class="logo1" src="img/faceboock.png" alt=""></span></a>
                <a href="https://twitter.com/conducimossas"><span class="redes"><img class="logo1" src="img/twitter.png" alt=""></span></a>
               </div>
-              <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
+               <h4 class="copy">© 2014 conducimos.com.co. <br> <a target="_blank" href="img/Politica de Tratamiento de Datos Personales.pdf">POLÍTICA PARA EL TRATAMIENTO DE DATOS PERSONALES</a></h4>
              </div>
              <div class="col">
               <div class=" desc-box">
@@ -92,7 +92,7 @@
                           <div class="row">
                               <div class="col">
                                 <div class="cen1 card-title"><img class="redes" src="img/logoAlcaldia.png" alt=""></a></h2></div>
-                                <h4 class="copy">Resolución No 01325 de 2014 de las secretaria de educación de Medellín</h4>
+                                <h4 class="copy">Resolución No 01325 de 2014 de la secretaria de educación de Medellín</h4>
                               </div>
                           </div>
                       </div>
@@ -102,7 +102,7 @@
              <div class="col-md-4 col-sm-6 col-xs-12">
                <ul class="address">
                 <img class="cen2 redes" src="img/logoTransporte.png" alt="">  
-                 <h4 class="copy">Resolución No 1240 del 15 de mayo de 2014 del ministerio de transport</h4>
+                 <h4 class="copy">Resolución No 1240 del 15 de mayo de 2014 del ministerio de transporte</h4>
                 </ul>
              </div>
          </div> 
