--- a/links/index.html
+++ b/links/index.html
@@ -28,18 +28,18 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
               <li><a class="dropdown-item" href="index.html">Inicio</a></li>
-              <li><a class="dropdown-item" href="links/vehiculos.html">Vehículos</a></li>
+              <li><a class="dropdown-item" href="vehiculos.html">Vehículos</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Dirección</a></li>
             </ul>
           <li class="nav-item">
-            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="links/vehiculos.html">VEHÍCULOS</a>
+            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="vehiculos.html">VEHÍCULOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="links/empresa.html">NUESTRA EMPRESA</a>
+            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="empresa.html">NUESTRA EMPRESA</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="links/formulario.php">CONTÁCTENOS</a>
+            <a class="nav-link active btn btn-outline-dark" aria-current="page" href="formulario.php">CONTÁCTENOS</a>
           </li>
           <li class="nav-item">
             <a target="_blank" class="nav-link active btn btn-outline-dark" aria-current="page" href="https://www.psepagos.co/PSEHostingUI/ShowTicketOffice.aspx?ID=8624">PAGOS<img class="pse" src="img/pse.png" alt=""></a>
@@ -112,13 +112,13 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Curso de conducción A1.</h4>
-        <a href="links/A1.html"><img src="img/A1.jpg" class="border card-img-top" alt="..."></a>
+        <a href="A1.html"><img src="img/A1.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <p class="card-text">El servicio de licencia de conducción categoría A1 (moto hasta 125cc) te permite conducir 
             motocicletas de bajo cilindraje, tiene un costo total de $832.000 incluye todo el proceso de 
             formación, exámenes médicos y la impresión de la licencia de conducción.
             </p>
-          <a href="links/A1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="A1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
@@ -134,13 +134,13 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Curso de conducción A2.</h4>
-        <a href="links/A2.html"><img src="img/A2.jpg" class="border card-img-top" alt="..."></a>
+        <a href="A2.html"><img src="img/A2.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <p class="card-text">El servicio de licencia de conducción categoría A2 te permite conducir 
             motocicletas de alto y bajo cilindraje, tiene un costo total de $946.000 incluye todo el proceso de 
             formación, exámenes médicos y la impresión de la licencia de conducción.
             </p>
-            <a href="links/A2.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+            <a href="A2.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
               <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
               <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
             </svg></a>
@@ -156,14 +156,14 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Curso de conducción B1.</h4>
-        <a href="links/B1.html"><img src="img/b1.jpg" class="border card-img-top" alt="..."></a>
+        <a href="B1.html"><img src="img/b1.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <p class="card-text">Te permite manejar automóviles, 
             motocarros, cuatrimotos, camperos, camionetas y microbuses de servicio particular 
             tiene un costo total de $1.250.000 incluye todo el proceso de formación, exámenes médicos y la 
             impresión de la licencia de conducción.
             </p>
-          <a href="links/B1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="B1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
@@ -183,13 +183,13 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Curso de conducción C1.</h4>
-        <a href="links/C1.html"><img src="img/C1.jpg" class="border card-img-top" alt="..."></a>
+        <a href="C1.html"><img src="img/C1.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <p class="card-text">La licencia de conducción categoría C1 te permite conducir automóviles, motocarros, cuatrimotos, 
             camperos, camionetas y microbuses de servicio público (placa blanca). Tiene un costo total de $1.480.000 incluye 
             todo el proceso de formación, exámenes médicos y la impresión de la licencia de conducción.
             </p>
-          <a href="links/C1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="C1.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
@@ -205,14 +205,14 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Renovación de licencia.</h4>
-        <a href="links/renovaciones.html"><img src="img/CONDUMEDICOS.jpg" class="border card-img-top" alt="..."></a>
+        <a href="renovaciones.html"><img src="img/CONDUMEDICOS.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <p class="card-text">El servicio de renovación de licencia de conducción tiene un costo total de $235.000 incluye 
             exámenes médicos y la impresión de la licencia de conducción. Los exámenes médicos son de 
             órganos y sentidos, es decir, visión, audición, motricidad, psicología y medicina general.
             Se entrega la licencia impresa a más tardar al siguiente día 
             hábil.</p>
-          <a href="links/renovaciones.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="renovaciones.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
@@ -228,11 +228,11 @@
     <div class="col">
       <div class="card h-100">
         <h4 class="card-title">Asesorias juridicas.</h4>
-        <a href="links/Asesorias.html"><img src="img/asesoria.jpg" class="border card-img-top" alt="..."></a>
+        <a href="Asesorias.html"><img src="img/asesoria.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <p class="card-text">Asesoria y acompañamiento integral en asuntos contravencionales y de responsabilidad civil.
             </p>
-          <a href="links/Asesorias.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="Asesorias.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
@@ -248,12 +248,12 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <a href="links/otrosservios.html"><img src="img/OTROS SERVICIOS.jpg" class="border card-img-top" alt="..."></a>
+        <a href="otrosservios.html"><img src="img/OTROS SERVICIOS.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Otros servicios: </h4>
           <p class="card-text">Desde que se incorporó el Registro Único Nacional de Tránsito más conocido como RUNT, se establecieron procesos y requisitos a través de esta plataforma para poder acceder a servicios tanto de consulta como de reporte, es por esto que te ofrecemos la posibilidad de realizar algunos trámites desde nuestra empresa, te brindamos servicio de inscripción, actualización de datos, duplicado de la licencia de conducción y cambio de documento de tarjeta de identidad a cédula de ciudadanía en la licencia de conducción. 
             </p>
-          <a href="links/otrosservios.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="otrosservios.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
@@ -265,11 +265,11 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <a href="links/certificados.html"><img src="img/certificamos.png" class="border card-img-top" alt="..."></a>
+        <a href="certificados.html"><img src="img/certificamos.png" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Certificados:</h4>
           <p class="card-text">Servicio prestado a personas y/o empresas que requieren la respectiva certificación para laborar como conductores y que les permite no solo evaluar sus conocimientos respecto a normatividad, técnicas y prevención sino también adquirir información nueva a modo de capacitación para el desempeño de sus labores, lo cual garantiza sus saberes y capacidades para ejercer y así cumplir con lo dispuesto en el Plan de Seguridad Vial (PSV) dispuesto en la empresa en la cual laboran o para cumplir los requisitos de contratación.</p>
-          <a href="links/certificados.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="certificados.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
@@ -281,12 +281,12 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <a href="links/aliados.html"><img src="img/aliados.jpg" class="border card-img-top" alt="..."></a>
+        <a href="aliados.html"><img src="img/aliados.jpg" class="border card-img-top" alt="..."></a>
         <div class="card-body">
           <h4 class="card-title">Aliados:</h4>
           <p class="card-text">Comprometidos contigo te brindamos diferentes alternativas para que accedas a nuestros servicios y puedas disfrutar de la mejor experiencia de servicio y aprendizaje. Hemos encontrado empresas de alto valor que se han unido a nosotros para aunar esfuerzos y obtengas lo que tanto quieres, servicios de altor valor a un costo asequible y con diferentes alternativas donde puedas elegir la que más se acomode a tu estado actual y te dejes consentir al disfrutar de un servicio pensado en tu bienestar. ¡Bienvenido! 
             </p>
-          <a href="links/aliados.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+          <a href="aliados.html" type="button" class="btn btn-outline-dark">VER<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
             <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
             <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
           </svg></a>
